Upgraded geekdoc to v0.35.7.

--- a/themes/hugo-geekdoc/layouts/_default/_markup/render-codeblock-mermaid.html
+++ b/themes/hugo-geekdoc/layouts/_default/_markup/render-codeblock-mermaid.html
@@ -6,6 +6,6 @@
 {{ end }}
 <!-- prettier-ignore-end -->
 
-<pre class="gdoc-mermaid mermaid">
+<pre class="gdoc-mermaid mermaid text-center">
   {{- .Inner -}}
 </pre>
